<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="180dip"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" 
    android:background="@drawable/reg_dialog_bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dip">

        <TextView
            android:id="@+id/activationTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/activation_title"
            android:textSize="20sp"
            android:textColor="@color/conf_dialog_text_color" />
    </RelativeLayout>
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/numberTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/enter_your_activation_code"
            android:textColor="@color/app_components_text_color"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:inputType="number"
            android:lines="3"
            android:maxLines="5"
            android:minLines="1" 
            />
    </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" 
            android:layout_marginRight="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginBottom="10dip"
            android:layout_alignParentBottom="true">


            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_marginRight="10dip"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/cancel_btn"
                android:textColor="@color/app_components_text_color"
                android:background="@drawable/btn_selector" />
            <Button
                android:id="@+id/okBtn"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="10dip"
                android:text="@string/ok_btn"
                android:textColor="@color/app_components_text_color"
                android:background="@drawable/btn_selector"/>
        </LinearLayout>
</RelativeLayout>